added event metadata
